overflow fix?

--- a/styles/main.css
+++ b/styles/main.css
@@ -33,6 +33,7 @@ body {
   background: var(--frost);
   color: var(--blue);
   padding: 0 3rem;
+  overflow-x: hidden;
 }
 
 html {
